examples/fail/boolop_or_requires_bool.hax
module Example::BoolOpOrRequiresBool;

pub sub main() -> Void {
  var Int $x = 1;
  var Bool $b = false or $x;
  return;
}
